# MAVSDK

example/test_data_with_takeoff/: CMakeLists.txt  takeoff_and_land_and_data.cpp
