cmake_minimum_required(VERSION 2.8.12)

project(takeoff_and_land_and_data)

if(NOT MSVC)
    add_definitions("-std=c++11 -Wall -Wextra -Werror")
else()
    add_definitions("-std=c++11 -WX -W2")
endif()

find_package(MAVSDK REQUIRED)

add_executable(takeoff_and_land_and_data
    takeoff_and_land_and_data.cpp
)

target_link_libraries(takeoff_and_land_and_data
    MAVSDK::mavsdk_telemetry
    MAVSDK::mavsdk_action
    MAVSDK::mavsdk
)
